cluster/apps/networking/traefik-auth/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: forward-auth
  namespace: networking
  labels:
    app: traefik-auth

spec:
  forwardAuth:
    address: http://traefik-auth:4181
    authResponseHeaders:
      - "X-Forwarded-User"
    trustForwardHeader: true
