cluster/apps/networking/traefik-auth/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-auth
  labels:
    app: traefik-auth

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-auth
  template:
    metadata:
      labels:
        app: traefik-auth
    spec:
      containers:
        - name: traefik-auth
          image: thomseddon/traefik-forward-auth:2
          ports:
            - containerPort: 4181
              protocol: TCP
          resources:
            limits:
              cpu: 40m
              memory: 20Mi
            requests:
              cpu: 10m
              memory: 5Mi
