cluster/apps/networking/traefik-auth/services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-auth
  namespace: networking
  labels:
    app: traefik-auth

spec:
  selector:
    app: traefik-auth
  ports:
    - protocol: TCP
      port: 4181
      targetPort: 4181
