cluster/apps/networking/traefik-auth/ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-auth
  namespace: networking
  labels:
    app: traefik-auth

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: traefik-auth
          port: 4181
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
